--- a/Akcounts/Akcounts.DataAccess.Tests/Akcounts.DataAccess.Tests.csproj
+++ b/Akcounts/Akcounts.DataAccess.Tests/Akcounts.DataAccess.Tests.csproj
@@ -36,6 +36,9 @@
     <Reference Include="NMock2">
       <HintPath>..\..\SharedLibs\NMock2.dll</HintPath>
     </Reference>
+    <Reference Include="NSubstitute">
+      <HintPath>..\..\SharedLibs\NSubstitute.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\SharedLibs\nunit.framework.dll</HintPath>
@@ -56,6 +59,7 @@
   <ItemGroup>
     <Compile Include="AccountRepository_spec.cs" />
     <Compile Include="AccountTagRepository_spec.cs" />
+    <Compile Include="FileWriter_spec.cs" />
     <Compile Include="TemplateRepository_spec.cs" />
     <Compile Include="Repository_spec.cs" />
     <Compile Include="JournalRepository_spec.cs" />
