--- a/Akcounts/Akcounts.DataAccess/Akcounts.DataAccess.csproj
+++ b/Akcounts/Akcounts.DataAccess/Akcounts.DataAccess.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileWriter.cs" />
     <Compile Include="Repositories\AccountRepository.cs" />
     <Compile Include="Repositories\AccountTagRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
