Added autobackup when saving files with FileWriter

--- a/Akcounts/Akcounts.UI.Tests/Akcounts.UI.Tests.csproj
+++ b/Akcounts/Akcounts.UI.Tests/Akcounts.UI.Tests.csproj
@@ -34,6 +34,9 @@
     <Reference Include="NMock2">
       <HintPath>..\..\SharedLibs\NMock2.dll</HintPath>
     </Reference>
+    <Reference Include="NSubstitute">
+      <HintPath>..\..\SharedLibs\NSubstitute.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\SharedLibs\nunit.framework.dll</HintPath>
