--- a/Akcounts/Akcounts.UI/Akcounts.UI.csproj
+++ b/Akcounts/Akcounts.UI/Akcounts.UI.csproj
@@ -223,19 +223,19 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Data\AccountTags.xml">
+    <Content Include="Data\accountTags.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Data\Template.xml">
+    <Content Include="Data\templates.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Data\Journals.xml">
+    <Content Include="Data\journals.xml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Data\Accounts.xml">
+    <Content Include="Data\accounts.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
