--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@
 *.Debug.cachefile
 
 ## TODO: If you have NuGet Package Restore enabled, uncomment this
-#packages/
+packages/
 
 # Visual C++ cache files
 ipch/
