Implemented MainWindow. Added AccountsView and VM

--- a/Akcounts/Akcounts.NewUI/Akcounts.NewUI.csproj
+++ b/Akcounts/Akcounts.NewUI/Akcounts.NewUI.csproj
@@ -63,6 +63,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Accounts\AccountsViewModel.cs" />
+    <Compile Include="Framework\IWorkspace.cs" />
     <Compile Include="MainWindow\AkcountsBootstrapper.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -87,10 +89,17 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Page Include="Accounts\AccountsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow\MainWindowView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Accounts\Resources\Images\account48.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
