--- a/Akcounts/Akcounts.NewUI/Akcounts.NewUI.csproj
+++ b/Akcounts/Akcounts.NewUI/Akcounts.NewUI.csproj
@@ -65,6 +65,9 @@
     </ApplicationDefinition>
     <Compile Include="Accounts\AccountsWorkspaceViewModel.cs" />
     <Compile Include="Accounts\AccountViewModel.cs" />
+    <Compile Include="Accounts\AccountSelectorView.xaml.cs">
+      <DependentUpon>AccountSelectorView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Framework\IDocumentWorkspace.cs" />
     <Compile Include="Framework\DocumentWorkspaceState.cs" />
     <Compile Include="Framework\DocumentWorkspace.cs" />
@@ -106,6 +109,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Accounts\AccountView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Accounts\AccountSelectorView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
