--- a/Akcounts/Akcounts.NewUI/Akcounts.NewUI.csproj
+++ b/Akcounts/Akcounts.NewUI/Akcounts.NewUI.csproj
@@ -94,7 +94,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Data\accounts.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <Page Include="Accounts\AccountsWorkSpaceView.xaml">
       <SubType>Designer</SubType>
@@ -123,6 +128,30 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Accounts\Resources\Images\account48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Data\accountTags.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Data\journals.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\templates.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Akcounts.DataAccess\Akcounts.DataAccess.csproj">
+      <Project>{7621044B-1303-4BD0-8C25-55521C4BF603}</Project>
+      <Name>Akcounts.DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Akcounts.Domain\Akcounts.Domain.csproj">
+      <Project>{8CDB3565-AEFC-4E34-AFA9-F0CF64564459}</Project>
+      <Name>Akcounts.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
