--- a/Akcounts/Akcounts.NewUI/Akcounts.NewUI.csproj
+++ b/Akcounts/Akcounts.NewUI/Akcounts.NewUI.csproj
@@ -40,8 +40,10 @@
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleInjector">
+      <HintPath>..\packages\SimpleInjector.2.0.2\lib\net40-client\SimpleInjector.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Interactivity">
       <HintPath>..\packages\Caliburn.Micro.1.4.1\lib\net45\System.Windows.Interactivity.dll</HintPath>
@@ -151,6 +153,10 @@
     <ProjectReference Include="..\Akcounts.Domain\Akcounts.Domain.csproj">
       <Project>{8CDB3565-AEFC-4E34-AFA9-F0CF64564459}</Project>
       <Name>Akcounts.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Akcounts.UI\Akcounts.UI.csproj">
+      <Project>{6ACC26F9-928D-4747-B8F7-5766642228B4}</Project>
+      <Name>Akcounts.UI</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
